# kiteplay

./: .gitignore  README.md  pyproject.toml  scaffold.sh  setup.cfg  setup.py  workspace.yaml
src/: definitions.py
src/assets/: image_generation.py  scene_generation.py  script_generation.py  video_composition.py
src/creation_tools/: base_tool.py
src/data_models/: Asset.py  Image.py  Scene.py  Video.py  Voiceover.py
src/orchestration/: audio_generation.py  definitions.py  dependency_graph.py  image_generation.py  publishing.py  scene_generation.py  script_generation.py  video_composition.py  video_generation.py  video_pipeline.py
src/plans/: chanakya_saying_001.yml  video_plan_001.yml
src/prompts/chatgpt/: generate_scene.txt
src/prompts/dalle/: generate_image.txt
src/prompts/runwayml/: generate_video_scene.txt
src/prompts/stable_diffusion/: generate_character.txt
src/tests/: test_dependency_graph.py  test_yaml_loader.py
src/tests/test_plans/: video_plan_001.yml
src/utils/: dagster_assets_helper.py  plan_loading.py  yaml_loader.py
