[project]
name = "kiteplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "kiteplay.definitions"
code_location_name = "kiteplay"
